Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-73140

QBluetoothDeviceDiscoveryAgent crash if turn on/off bluetooth fast

    XMLWordPrintable

Details

    • macOS
    • 7accd34495a8269f9b335446ae779bd56cd4c4c0 (qt/qtconnectivity/5.12)

    Description

      I'm working on the project base on example lowenergyscanner.
      Step to reproduce:

      1. Turn on bluetooth
      2. Run the app. it will init QBluetoothDeviceDiscoveryAgent and start discover
      3. Turn off bluetooth while is scanning (after app runs 5s)
      4. QBluetoothDeviceDiscoveryAgent log error and app crash after 20 -30s

      if turn off bluetooth after about 1 minute, don't get the error and app does not crash.

      Attachments

        Issue Links

          No reviews matched the request. Check your Options in the drop-down menu of this sections header.

          Activity

            People

              tpochep Timur Pocheptsov
              nguoithichkhampha Cuong Trinh
              Votes:
              1 Vote for this issue
              Watchers:
              2 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  There are no open Gerrit changes